Sutter Health/src/objects/ProvidersByPhoneNumber__c.object
<CustomObject>
    <description>Used to store Providers common phone numbers.</description>
    <fields>
        <fullName>NonValidatedCount__c</fullName>
        <formula>SER_Non_Validated__c +  SER_Accepted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonValidatedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDI_Campaign__c</fullName>
        <description>used to store the campaign name.</description>
        <label>Campaign</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SER_Accepted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to enter accepted providers count.</description>
        <label>Accepted</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SER_Non_Validated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to enter non validated count.</description>
        <label>Non Validated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SER_Validated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to enter providers validated count.</description>
        <label>Validated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Current_Campaign__c</fullName>
        <formula>IF(AND(NOT( ISBLANK( PDI_Campaign__c ) ), TRIM( PDI_Campaign__c ) = TRIM( $Label.CL176_PDI_Current_Campaign_Name )) , &apos;Current Campaign&apos; , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Phone_Number__c</fullName>
        <description>used to store phone number</description>
        <label>Tech Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Primary_Phone_Number__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp;&quot;&apos;);}&quot; + &quot; else {window.open(&apos;/&quot;&amp; Id &amp;&quot;&apos;)}&quot;,  Name , &quot;_blank&quot; )</formula>
        <label>Primary Phone Number</label>
        <type>Text</type>
    </fields>
    <label>Providers By Phone Number</label>
    <listViews>
        <fullName>My_Open_Phone_Numbers</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SER_Accepted__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Non_Validated__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>My Open Phone Numbers</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Closed_Phone_Numbers</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>PDINonValidatedDuplicateQueue</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SER_Validated__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Non_Validated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Team Closed Phone Numbers</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Open_Phone_Numbers</fullName>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SER_Accepted__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>PDINonValidatedDuplicateQueue</value>
        </filters>
        <label>My Team Open Phone Numbers</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PDINonValidatedDuplicateQueue_ProvidersByPhoneNumber</fullName>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Non Validated Phone Numbers</label>
        <queue>PDINonValidatedDuplicateQueue</queue>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PDI_My_Closed_Phone_Numbers</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SER_Non_Validated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Validated__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Closed Phone Numbers</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Validated_Phone_Numbers</fullName>
        <columns>Tech_Primary_Phone_Number__c</columns>
        <columns>SER_Non_Validated__c</columns>
        <columns>SER_Accepted__c</columns>
        <columns>SER_Validated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SER_Validated__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Non_Validated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SER_Accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Validated Phone Numbers</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Phone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers By Phone Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>